style: fixed overflow on mobile issue

--- a/src/components/MainMap/mainmap.module.css
+++ b/src/components/MainMap/mainmap.module.css
@@ -16,19 +16,18 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	animation: fadeInOut .6s alternate ease-in-out;
+	animation: fadeInOut 0.6s alternate ease-in-out;
 }
 
 .map-loading h2 {
-	animation: fadeInOut .6s infinite alternate ease-in-out;
+	animation: fadeInOut 0.6s infinite alternate ease-in-out;
 }
 
 @keyframes fadeInOut {
 	from {
-		opacity: .1;
+		opacity: 0.1;
 	}
 	to {
 		opacity: 1;
 	}
 }
-
