--- a/src/pages/styles/index.css
+++ b/src/pages/styles/index.css
@@ -1,1 +1,6 @@
 /* MAIN CONTENT */
+
+.index-page {
+	width: 100%;
+	height: 100%;
+}
