--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,8 +6,9 @@ html {
 	max-width: 100vw;
 	padding: 0;
 	margin: 0;
-	height: 100%;
 	width: 100%;
+	height: 100%;
+	overflow-y: hidden;
 }
 
 body {
@@ -18,6 +19,18 @@ body {
 		hsla(350, 96%, 20%, 0.6),
 		hsla(29, 100%, 50%, 1)
 	);
+	width: 100%;
+	height: 100%;
+}
+
+#gatsby-focus-wrapper {
+	height: 100%;
+	width: 100%;
+}
+
+#___gatsby {
+	height: 100%;
+	width: 100%;
 }
 
 /* variables */
